# qgis_mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tools.md
.github/workflows/: ci.yml
qgis_mcp_plugin/: qgis_mcp_plugin.py
src/qgis_mcp/: qgis_mcp_server.py  qgis_socket_client.py
tests/: conftest.py  test_mcp_tools.py  test_plugin_helpers.py  test_qgis_connection.py  test_qgis_mcp_server_class.py  test_qgis_socket_client.py  test_server_lifespan.py
