[project]
name = "qgis-mcp"
version = "0.2.0"
description = "QGIS integration through the Model Context Protocol — introspection, styling, cartography, and spatial analysis tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "James Williams", email = "james.williams@jtdub.com"},
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.urls]
Repository = "https://github.com/jtdub/qgis_mcp"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pylint>=3.0",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--tb=short",
    "--strict-markers",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long
    "B904",   # raise without from in except
]

[tool.ruff.lint.per-file-ignores]
"qgis_mcp_plugin/*" = [
    "F403",   # star imports (from qgis.gui import *)
    "F405",   # undefined names from star imports
    "E402",   # module level import not at top
]
"tests/test_plugin_helpers.py" = [
    "E402",   # imports after sys.modules mocking
]

[tool.ruff.lint.isort]
known-first-party = ["qgis_mcp"]

[tool.pylint.main]
py-version = "3.10"
jobs = 0

[tool.pylint."messages control"]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "C0301",  # line-too-long
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0603",  # global-statement
    "W0613",  # unused-argument (ctx required by MCP framework)
    "W0707",  # raise-missing-from (handled by ruff B904)
    "W0718",  # broad-exception-caught
    "W0719",  # broad-exception-raised
    "W1203",  # logging-fstring-interpolation
    "C0103",  # invalid-name (module-level _qgis_connection)
    "R0801",  # duplicate-code
    "R0912",  # too-many-branches
    "R0917",  # too-many-positional-arguments
    "W0212",  # protected-access
]

[tool.pylint.imports]
ignored-modules = [
    "qgis",
    "qgis.core",
    "qgis.gui",
    "qgis.PyQt",
    "qgis.PyQt.QtCore",
    "qgis.PyQt.QtWidgets",
    "qgis.PyQt.QtGui",
    "qgis.utils",
    "processing",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qgis_mcp"]

[[tool.mypy.overrides]]
module = "qgis_mcp_plugin.*"
ignore_errors = true
